--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -28,19 +28,19 @@
                     Skills
                   </h5>
                 </div>
-                <span>Javascript / Typescript (Node.js)</span>
+                <span>Javascript (Node.js)</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                <span>Python (Django)</span>
+                <span>Typescript</span>
                 <div class="progress">
-                  <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
+                  <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
                 <span>Ethereum (Solidity)</span>
                 <div class="progress">
-                  <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                  <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
                 <!--
@@ -52,7 +52,12 @@
                 -->
                 <span>React.js</span>
                 <div class="progress">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="40" aria-valuemin="0"
+                  <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
+                    aria-valuemax="100"></div>
+                </div>
+                <span>Python (Django)</span>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
                 <span>Databases (SQL / NoSQL)</span>
@@ -83,7 +88,7 @@
                   Seasoned software developer working remotely, with over ten years of experience in startups and small teams.
                 </p>
                 <p class="lead">
-                  I consider myself to be a hard-working generalist who operates autonomously and has high stress tolerance.
+                  I consider myself to be a hard-working generalist who operates autonomously.
                 </p>
                 <p class="lead">
                   Domains of interest:
