--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -55,7 +55,7 @@
                   <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                <span>Python (Django)</span>
+                <span>Python (+Django)</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
                     aria-valuemax="100"></div>
