--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -42,7 +42,7 @@
               </div>
             </div>
             <hr />
-            <p>HTML5 game written in Typescript + Phaser 3 of the Tower Defense genre. It is packaged for Android using CapacitorJS.</p>
+            <p>HTML5 game written in Typescript + Phaser 3 of the Tower Defense genre. It is packaged for iOS and Android using CapacitorJS.</p>
           </div>
         </div>
       </div>
@@ -63,7 +63,7 @@
                 </div>
               </div>
               <div class="col-sm-4">
-                <a href="https://personal-finance.morion4000.com" target="_blank">
+                <a href="https://github.com/morion4000/personal-finance" target="_blank">
                   <div class="w-like">
                     <span class="ion-log-in"></span>
                   </div>
@@ -121,7 +121,7 @@
                 </div>
               </div>
               <div class="col-sm-4">
-                <a href="https://www.emint.io" target="_blank">
+                <a href="https://github.com/morion4000/emint-contracts" target="_blank">
                   <div class="w-like">
                     <span class="ion-log-in"></span>
                   </div>
@@ -237,7 +237,7 @@
                 </div>
               </div>
               <div class="col-sm-4">
-                <a href="https://www.webdollarminingpool.com" target="_blank">
+                <a href="#" target="_blank">
                   <div class="w-like">
                     <span class="ion-log-in"></span>
                   </div>
@@ -266,7 +266,7 @@
                 </div>
               </div>
               <div class="col-sm-4">
-                <a href="https://www.hostero.eu" target="_blank">
+                <a href="https://github.com/hosteroeu" target="_blank">
                   <div class="w-like">
                     <span class="ion-log-in"></span>
                   </div>
@@ -295,7 +295,7 @@
                 </div>
               </div>
               <div class="col-sm-4">
-                <a href="https://www.molamp.net" target="_blank">
+                <a href="https://github.com/morion4000/molamp" target="_blank">
                   <div class="w-like">
                     <span class="ion-log-in"></span>
                   </div>
