--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -55,11 +55,13 @@
                   <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
+                <!--
                 <span>Python (+Django)</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
+                -->
                 <span>Databases (SQL / NoSQL)</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
@@ -85,10 +87,10 @@
                 </div>
                 -->
                 <p class="lead">
-                  Seasoned software developer working remotely, with over ten years of experience in startups and small teams.
+                  Seasoned software developer working remotely, with over fifteen years of experience in startups and small teams.
                 </p>
                 <p class="lead">
-                  I consider myself to be a hard-working generalist who operates autonomously.
+                  I am a hard-working generalist who operates autonomously and delivers fast.
                 </p>
                 <p class="lead">
                   Domains of interest:
