--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -42,7 +42,7 @@
               </div>
             </div>
             <hr />
-            <p>HTML5 game written in Typescript + Phaser 3 of the Tower Defense genre. It is packaged for iOS and Android using CapacitorJS.</p>
+            <p>Tower Defense game written in Typescript + Phaser 3. It is packaged for iOS, Android, and PC using CapacitorJS and Electron.</p>
           </div>
         </div>
       </div>
