--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -158,7 +158,7 @@
               </div>
             </div>
             <hr />
-            <p>Telegram bot (Node.js + MySQL + Serverless) for making tips, staking, and buying WebDollar (WEBD) cryptocurrency. It has 2,000 users and has processed over $150,000 in tips.</p>
+            <p>Telegram bot (Node.js + MySQL + Serverless) for making tips and staking WebDollar (WEBD) cryptocurrency. It has 30,000 users and processed over 300,000 tips.</p>
           </div>
         </div>
       </div>
@@ -245,7 +245,7 @@
               </div>
             </div>
             <hr />
-            <p>WMP is an infrastructure project that runs the official WebDollar mining pool software with over 50 miners. It also includes custom software that collects and displays stats for miners.</p>
+            <p>WMP is an infrastructure project that runs the official WebDollar mining pool software. It also includes custom tools that collect and display stats for miners.</p>
           </div>
         </div>
       </div>
@@ -332,7 +332,7 @@
               </div>
             </div>
             <hr />
-            <p>Web application build on Django (MySQL + RabbitMQ) which connects to themoviedb.org API to get movies data.</p>
+            <p>Web application built on Django (MySQL + RabbitMQ) which connects to themoviedb.org API to get movie data.</p>
           </div>
         </div>
       </div>
@@ -390,7 +390,7 @@
               </div>
             </div>
             <hr />
-            <p>SWar is a MMOTBS game playable in the browser built with Javascript, jQuery, PHP, and MySQL.</p>
+            <p>SWar is an MMOTBS game playable in the browser built with Javascript, jQuery, PHP, and MySQL.</p>
           </div>
         </div>
       </div>
