--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -19,6 +19,35 @@
     <div class="row">
       <div class="col-md-4">
         <div class="work-box">
+          <a href="/assets/img/get-site.png" data-lightbox="gallery-mf">
+          <div class="work-img">
+            <img src="/assets/get-site" alt="" class="img-fluid">
+          </div>
+          </a>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">Get Site</h2>
+                <div class="w-more">
+                    <span class="w-ctegory">Software Development</span><br />
+                    <span class="w-date">Nov. 2013</span>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <a href="https://www.getsite.ai" target="_blank">
+                  <div class="w-like">
+                    <span class="ion-log-in"></span>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <hr />
+            <p>Create a beautiful website by talking to a GPT-4 chatbot.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="work-box">
           <a href="/assets/img/haunted-tower.png" data-lightbox="gallery-mf">
           <div class="work-img">
             <img src="/assets/img/haunted-tower.png" alt="" class="img-fluid">
@@ -29,7 +58,7 @@
               <div class="col-sm-8">
                 <h2 class="w-title">Haunted Tower</h2>
                 <div class="w-more">
-                    <span class="w-ctegory">Software Development</span><br />
+                    <span class="w-ctegory">Game Development</span><br />
                     <span class="w-date">Jan. 2022</span>
                 </div>
               </div>
