--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -21,7 +21,7 @@
         <div class="work-box">
           <a href="/assets/img/get-site.png" data-lightbox="gallery-mf">
           <div class="work-img">
-            <img src="/assets/get-site" alt="" class="img-fluid">
+            <img src="/assets/get-site.png" alt="" class="img-fluid">
           </div>
           </a>
           <div class="work-content">
