--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -21,7 +21,7 @@
         <div class="work-box">
           <a href="/assets/img/get-site.png" data-lightbox="gallery-mf">
           <div class="work-img">
-            <img src="/assets/get-site.png" alt="" class="img-fluid">
+            <img src="/assets/img/get-site.png" alt="" class="img-fluid">
           </div>
           </a>
           <div class="work-content">
@@ -274,7 +274,7 @@
               </div>
             </div>
             <hr />
-            <p>WMP is an infrastructure project that runs the official WebDollar mining pool software. It also includes custom tools that collect and display stats for miners.</p>
+            <p>WMP was an infrastructure project that ran a custom version of the WebDollar mining software.</p>
           </div>
         </div>
       </div>
