--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -187,36 +187,7 @@
               </div>
             </div>
             <hr />
-            <p>Telegram bot (Node.js + MySQL + Serverless) for making tips and staking WebDollar (WEBD) cryptocurrency. It has 30,000 users and processed over 300,000 tips.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="work-box">
-          <a href="/assets/img/webdollar-1.png" data-lightbox="gallery-mf">
-            <div class="work-img">
-              <img src="/assets/img/webdollar-1.png" alt="" class="img-fluid">
-            </div>
-          </a>
-          <div class="work-content">
-            <div class="row">
-              <div class="col-sm-8">
-                <h2 class="w-title">WebDollar Tools</h2>
-                <div class="w-more">
-                    <span class="w-ctegory">Software Development</span><br />
-                    <span class="w-date">Feb. 2019</span>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <a href="https://www.hostero.eu/tools" target="_blank">
-                  <div class="w-like">
-                    <span class="ion-log-in"></span>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <hr />
-            <p>Open source software developed for the WebDollar ecosystem. It also includes Docker images.</p>
+            <p>Telegram bot (Node.js + MySQL + Serverless) for making tips and staking crypto. It has 30,000 users and processed over 300,000 tips.</p>
           </div>
         </div>
       </div>
