--- a/views/partials/intro.html
+++ b/views/partials/intro.html
@@ -6,7 +6,8 @@
         <!--<p class="display-6 color-d">Hello, world!</p>-->
         <h1 class="intro-title mb-4">Hi, I'm Adrian</h1>
         <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer,DevOps Engineer,Blockchain Developer</span><strong class="text-slider"></strong></p>
-        <p class="pt-3">
+        <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="/resume" target="_blank" role="button">View Resume (CV)</a></p>
+        <!--<p class="pt-3">
           <div class="about-img">
             <a href="/assets/img/avatar4.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
@@ -14,7 +15,7 @@
               </div>
             </a>
           </div>
-        </p>
+        </p> -->
       </div>
     </div>
   </div>
