--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -102,8 +102,7 @@
                   </ul>
                 </p>
 
-                <br />
-                <a class="btn btn-primary btn js-scroll px-4" href="/resume" target="_blank" role="button">View Resume (CV)</a>
+                <!--<a class="btn btn-primary btn js-scroll px-4" href="/resume" target="_blank" role="button">View Resume (CV)</a>-->
               </div>
             </div>
           </div>
