--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -179,7 +179,7 @@
                 </div>
               </div>
               <div class="col-sm-4">
-                <a href="https://github.com/morion4000/telegram-tip-bot" target="_blank">
+                <a href="https://webdollar-tip-bot.getsite.online" target="_blank">
                   <div class="w-like">
                     <span class="ion-log-in"></span>
                   </div>
