--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -92,7 +92,7 @@
                 </div>
               </div>
               <div class="col-sm-4">
-                <a href="https://github.com/morion4000/personal-finance" target="_blank">
+                <a href="https://money-streams.getsite.online" target="_blank">
                   <div class="w-like">
                     <span class="ion-log-in"></span>
                   </div>
