--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -50,7 +50,7 @@
                     aria-valuemax="100"></div>
                 </div>
                 -->
-                <span>React.js</span>
+                <span>React</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                     aria-valuemax="100"></div>
@@ -62,7 +62,7 @@
                     aria-valuemax="100"></div>
                 </div>
                 -->
-                <span>Databases (SQL / NoSQL)</span>
+                <span>Databases (MySQL / MongoDB)</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                     aria-valuemax="100"></div>
