--- a/views/partials/scripts.html
+++ b/views/partials/scripts.html
@@ -15,12 +15,12 @@
 <!-- Template Main Javascript File -->
 <script src="/assets/js/main.js"></script>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-16309384-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4N7PPXL95E"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-16309384-1');
+  gtag('config', 'G-4N7PPXL95E');
 </script>
