--- a/views/index.html
+++ b/views/index.html
@@ -88,10 +88,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="copyright-box">
-              <p class="copyright">&copy; 2024 <strong>morion4000</strong>. All Rights Reserved.</p>
-              <div class="credits">
-                <a href="https://old.morion4000.com">Old site</a>
-              </div>
+              <p class="copyright">&copy; 2024 <strong>Adrian Moraru</strong>. All Rights Reserved.</p>
             </div>
           </div>
         </div>
