--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -92,7 +92,7 @@
                 </div>
               </div>
               <div class="col-sm-4">
-                <a href="https://money-streams.getsite.online" target="_blank">
+                <a href="https://money-streams.morion4000.com" target="_blank">
                   <div class="w-like">
                     <span class="ion-log-in"></span>
                   </div>
@@ -179,7 +179,7 @@
                 </div>
               </div>
               <div class="col-sm-4">
-                <a href="https://webdollar-tip-bot.getsite.online" target="_blank">
+                <a href="https://webdollar-tip-bot.morion4000.com" target="_blank">
                   <div class="w-like">
                     <span class="ion-log-in"></span>
                   </div>
