--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -121,7 +121,7 @@
                 </div>
               </div>
               <div class="col-sm-4">
-                <a href="https://github.com/morion4000/javascript-blockchain" target="_blank">
+                <a href="https://javascript-blockchain.morion4000.com" target="_blank">
                   <div class="w-like">
                     <span class="ion-log-in"></span>
                   </div>
